Fixes and Updates:
	- Added waypoints for chapters 2, 3, and 6 of the 9.2 campaign.
	- Fixed an issue with Cinematics automation that caused the screen to go black, white, or the game to become unplayable.